--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@angular/localize": "^15.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/lodash": "^4.17.4",
+    "@types/node": "^18.19.0",
     "@types/pdfmake": "^0.2.9",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
